Fixed issues of direct chat and profile gap

--- a/bootstrap-dashboard/dashboard.css
+++ b/bootstrap-dashboard/dashboard.css
@@ -28,7 +28,7 @@
 }
 
 #top-card-icon {
-    font-size: 48px;
+    font-size: 30px;
     color: white;
 }
 
@@ -153,19 +153,20 @@
 #order-status {
     color: white;
     font-size: 15px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     border-radius: 2px;
 }
 
 #view-all-btn{
     background-color:rgb(234 234 234);
-    padding-top: 3px;
-    padding-bottom: 3px;
-    padding-left: 5px;
-    padding-right: 5px;
+    font-size: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     border-radius: 2px;
 }
 
@@ -251,25 +252,18 @@ button {
     border-right: solid 1px black;
     z-index: 999;
     background: black;
-    width: 300px;
+    width: 200px;
     height: 100vh;
     overflow-y: auto;
     transition-property: transform;
     transition-duration: .4s;
     transform: translateX(-320px);
     cursor: pointer;
+    color: white;
 }
 
 #nav.open {
     transform: translateX(0);
-}
-
-li {
-    margin-top: 40px;
-    font-size: 20px;
-    font-family: monospace;
-    color: white;
-    padding-left: 10px;
 }
 
 #profile-nav{
@@ -284,4 +278,17 @@ li {
 
 #nav-rigth{
     margin-left: auto;
+}
+
+#dropdown{
+   color:rgb(125, 114, 114); 
+}
+
+.dropdown-menu.show{
+    margin-top: 20px;
+    display: contents;
+}
+
+.dropdown-item:hover{
+    background-color: rgb(50, 46, 46);
 }
